--- a/_posts/2025-03-11-LLM模型训练.md
+++ b/_posts/2025-03-11-LLM模型训练.md
@@ -8,9 +8,11 @@ tags: [LLM, 模型训练] # 文章标签 (可以多个)
 
 LLM 训练
 
-
+## User
 如果期望本地部署一个类似 7B 大小的 LLM 用于特定领域的问题，比如嵌入式软硬件系统研发相关，但是发现其回答问题的结果质量不够好。 如何改善这个模型的服务效果？ 请你充分考虑各种情况和解决方案，然后详细告知我执行的步骤。
 
+
+## Agent
 
 针对本地部署7B参数规模的LLM在嵌入式系统领域效果不佳的问题，我将为您梳理系统化的优化方案，具体分为以下七个阶段实施：
 
