--- a/_posts/2025-03-11-中医与中药.md
+++ b/_posts/2025-03-11-中医与中药.md
@@ -6,10 +6,12 @@ categories: [IAsk, 中医, 中药, 医与药]    # 文章分类 (可以多个)
 tags: [中医, 中药, 医与药] # 文章标签 (可以多个)
 ---
 
-
+## User
 
 我们应该如何看待和对待中医与中药才是对自己最负责任的态度？
 
+
+## Agent
 
 对待中医与中药，既不应全盘否定其传统智慧，也不可盲目迷信其“天然无害”。最负责任的态度是**基于科学证据、理性评估、合理应用**，并结合现代医学的优势。以下为具体建议：
 
@@ -87,11 +89,12 @@ tags: [中医, 中药, 医与药] # 文章标签 (可以多个)
 **最终目标**：以开放心态接纳传统智慧，以科学标准筛选有效手段，在安全前提下实现个体健康利益最大化。
 
 
-
+## User
 
 目前有哪些中成药是经过大量实践确认有疗效的
 
 
+## Agent
 
 以下是一些经过大量实践验证疗效的中成药，结合临床应用和现代研究，分为不同类别进行介绍：
 
