--- a/_posts/2025-03-11-口腔溃疡.md
+++ b/_posts/2025-03-11-口腔溃疡.md
@@ -6,9 +6,11 @@ categories: [IAsk, 口腔溃疡, 上火, 医与药]    # 文章分类 (可以多
 tags: [口腔溃疡, 上火, 医与药] # 文章标签 (可以多个)
 ---
 
+## User
 
 口腔溃疡的原因是什么？ 处理上火的科学方式是什么？ 如何快速恢复
 
+## Agent
 
 ### 口腔溃疡的原因
 口腔溃疡（俗称“口疮”）的发生通常与以下因素相关：
@@ -66,3 +68,4 @@ tags: [口腔溃疡, 上火, 医与药] # 文章标签 (可以多个)
 - **盲目补充维生素**：仅对缺乏者有效，过量可能中毒，建议检测后补充。
 
 通过综合护理，多数溃疡可在1-2周内自愈，关键在减少刺激、促进修复并预防复发。
+
