--- a/_posts/2025-03-11-氨基葡萄糖.md
+++ b/_posts/2025-03-11-氨基葡萄糖.md
@@ -6,9 +6,12 @@ categories: [IAsk, 氨基葡萄糖, 氨糖, 医与药]    # 文章分类 (可以
 tags: [氨基葡萄糖, 氨糖, 医与药] # 文章标签 (可以多个)
 ---
 
+
+## User
+
 介绍一下盐酸氨基葡萄糖和硫酸氨基葡萄糖的药效、药理和差异
 
-
+## Agent
 
 嗯，用户让我介绍一下盐酸氨基葡萄糖和硫酸氨基葡萄糖的药效、药理和差异。我需要先理清楚这两个药物的基本信息。氨基葡萄糖是一种天然存在的氨基糖，主要存在于关节软骨中，通常作为膳食补充剂用于骨关节炎的治疗。不过用户可能想知道更详细的内容，比如它们的化学结构、作用机制、药效学差异，还有临床应用上的区别。
 
