--- a/_posts/2025-03-11-素食与健康.md
+++ b/_posts/2025-03-11-素食与健康.md
@@ -6,9 +6,11 @@ categories: [IAsk, 健康, 素食, 膳食补充剂]    # 文章分类 (可以多
 tags: [健康, 素食, 膳食补充剂] # 文章标签 (可以多个)
 ---
 
+## User
 
 坚持素食的生活方式，对健康有哪些影响？
 
+## Agent
 
 坚持素食的生活方式对健康的影响是多方面的，既有潜在益处，也存在需要注意的风险。以下是科学角度的综合分析：
 
@@ -72,11 +74,11 @@ tags: [健康, 素食, 膳食补充剂] # 文章标签 (可以多个)
 
 
 
-
+## User
 
 素食主义者如何简单方便的补充蛋白质、铁、钙、维生素B12和omega-3脂肪酸，为我推荐一些日常的饮食搭配以及必要的膳食补充剂
 
-
+## Agent
 
 素食主义者在补充蛋白质、铁、钙、维生素B12和omega-3脂肪酸时，可以通过合理的饮食搭配和必要的膳食补充剂来实现。以下是一些简单方便的建议：
 1. 蛋白质：
