--- a/_posts/2025-03-11-多帧图像超分辨率算法.md
+++ b/_posts/2025-03-11-多帧图像超分辨率算法.md
@@ -8,8 +8,12 @@ tags: [算法, 图像算法, 视觉算法, 多帧图像超分辨率] # 文章标
 
 多帧图像超分辨率算法
 
+## User
+
 多帧图像超分辨率算法当前最先进的方法是哪几个？ 他们的评测效果是怎样的？ 方法原理是怎样的？ 有什么差异？
 
+
+## Agent
 
 好的，用户问的是当前多帧图像超分辨率（Multi-Frame Super-Resolution, MFSR）最先进的方法有哪些，它们的评测效果、原理以及差异。我需要先回忆一下最近的文献和研究成果，确保信息是最新的。
 
@@ -125,8 +129,12 @@ tags: [算法, 图像算法, 视觉算法, 多帧图像超分辨率] # 文章标
 
 ---
 
+## User
+
 多帧图像超分辨率算法当前最先进的方法是哪几个？ 他们的评测效果是怎样的？ 方法原理是怎样的？ 有什么差异？以在手机端部署为目标使用场景。
 
+
+## Agent
 
 好的，我现在需要处理用户关于多帧图像超分辨率算法的问题，并且这次用户特别强调了以手机端部署为目标场景。首先，我需要回顾之前对话的历史，确保这次回答符合用户的需求变化。
 
@@ -203,6 +211,7 @@ tags: [算法, 图像算法, 视觉算法, 多帧图像超分辨率] # 文章标
 ---
 
 ### **三、评测效果对比**
+
 | **方法**         | PSNR (dB) | SSIM   | 参数量 (M) | FLOPs (G) | 手机端FPS (720p) | 支持框架           |
 |------------------|-----------|--------|------------|-----------|------------------|--------------------|
 | EDVR-Lite        | 30.1      | 0.868  | 0.8        | 12        | 25 (骁龙888)     | TFLite, MNN        |
