--- a/_posts/2025-03-11-应用安全.md
+++ b/_posts/2025-03-11-应用安全.md
@@ -8,8 +8,12 @@ tags: [系统架构, 应用安全, 通讯安全] # 文章标签 (可以多个)
 
 应用安全
 
-目前开发移动应用，需要和后台服务通信的的场景，通行的确保服务安全和后台服务安全的模式是什么？   App 如何防止逆向和破解，通讯如何确保安全？ 服务器如何防止爆破？ 给出明确的指导和操作步骤
+## User
 
+目前开发移动应用，需要和后台服务通信的的场景，通行的确保服务安全和后台服务安全的模式是什么？App 如何防止逆向和破解，通讯如何确保安全？ 服务器如何防止爆破？ 给出明确的指导和操作步骤
+
+
+## Agent
 
 嗯，用户问的是关于移动应用与后台服务通信时的安全模式，以及如何防止逆向、破解和服务器爆破。首先，我得理清楚这些问题的关键点，确保覆盖所有方面。
 
