--- a/_posts/2025-03-14-大模型做推荐.md
+++ b/_posts/2025-03-14-大模型做推荐.md
@@ -1,6 +1,6 @@
 ---
 layout: post             # 使用 'post' 布局
-title:  "大模型做推荐[AI读论文]"   # 文章标题
+title:  "大模型做推荐[AI速读]"   # 文章标题
 date:   2025-03-14 00:20:00 +0800   # 发布日期和时间 (时区可选)
 categories: [IAsk, 推荐系统, LLM, Paper]    # 文章分类 (可以多个)
 tags: [推荐系统, LLM, Paper] # 文章标签 (可以多个)
